
syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto
 
package pbc;

message Time {
    int64 		sec = 1;
    int32 		nsec = 2;
}

message Attrtype {
    int64 		Valid = 1;
    uint64 		Inode = 2;
    uint64 		Size = 3;
    uint64 		Blocks = 4;
    uint64  Atime = 5;
    uint64  Mtime = 6;
    uint64  Ctime = 7;
    uint64  Crtime = 8;
    uint32 		FileMode = 9;
    uint32 		Nlink = 10;
    uint32 		Uid = 11;
    uint32 		Gid = 12;
    uint32 		Rdev = 13;
    uint32 		Flags = 14;
    uint32 		BlockSize = 15;
}

message Node {
    string 		Name = 1;
    Attrtype 		Attrs = 2;
    uint64 		Version = 3;
    string 		PrevSig = 4;
    map<string, string>	ChildSigs = 5;
    repeated string 	DataBlocks = 6;
}

message Head {
    string 		Root = 1;
    uint64 		NextInd = 2;
    uint64 		Replica = 3;
}

//=====================================================================

service Chunk {
    rpc Put (ChunkPutRequest) returns (ChunkPutReply) {}
    rpc Get (ChunkGetRequest) returns (ChunkGetReply) {}
    rpc List (ChunkListRequest) returns (ChunkListReply) {}
}

message ChunkPutRequest {
    string 		Key = 1;
    bytes 		Value = 2;
}

message ChunkPutReply {
    string 		ErrorString = 1;
}

message ChunkGetRequest {
    string 		Key = 1;
}

message ChunkGetReply {
    string 		Key = 1;
    bytes 		Value = 2;
}

message ChunkListRequest {
}

message ChunkListReply {
    repeated 		string Keys = 1;
}


